--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ header h1 {
 }
 
 header h1 .seo {
-    color: #d9dcd6;
+    color: rgb(119, 117, 117);
 }
 
 header nav {
@@ -50,7 +50,7 @@ p {
     font-size: 16px;
 }
 
-#hero-section {
+#hero-image {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -86,72 +86,28 @@ aside {
     background-color: #2589bd;
 }
 
-#benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-#benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
+#benefit-lead, 
+#benefit-brand, 
 #benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-#benefit-lead h3 {
+h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-#benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-#benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-#benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-#benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
+#benefit-lead img, 
+#benefit-brand img, 
 #benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-#search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-#online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
+#search-engine-optimization, 
+#online-reputation-management, 
 #social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
@@ -161,29 +117,13 @@ aside {
     color: #ffffff;
 }
 
-#search-engine-optimization img {
-    max-height: 200px;
-}
-
-#online-reputation-management img {
-    max-height: 200px;
-}
-
+#search-engine-optimization img, 
+#online-reputation-management img, 
 #social-media-marketing img {
     max-height: 200px;
 }
 
-#search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-#online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-#social-media-marketing h2 {
+h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
